--- a/src/style.css
+++ b/src/style.css
@@ -1,73 +1,108 @@
 .ra-refModal {
-    top: 10px;
-    width: calc(80%);
-    transform-origin: 128px 490px 0px;
-    max-height: calc(80vh);
-    overflow: hidden;
-  }
-  .ra-refModal .ant-modal-footer {
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
-  .ra-refModal .ant-table-header > table > thead > tr > th.ant-table-selection-column .ant-checkbox-wrapper {
-    visibility: hidden;
-    pointer-events: none;
-  }
-  .ra-refModal .ant-modal-body {
-    padding: 0px;
-    overflow: auto;
-    max-height: calc(60vh);
-    padding-bottom: 50px;
-  }
-  .ra-refModal__input {
-    border: 1px solid #e5e5e5;
-    padding: 0px 15px;
-    margin-bottom: 15px;
-    position: relative;
-    border-radius: 5px;
-    height: 32px;
-    display: flex;
-    align-items: center;
-  }
-  .ra-refModal__input.--empty {
-    cursor: pointer;
-  }
-  .ra-refModal__input .ra-refModal__input__plus {
-    position: absolute;
-    right: 15px;
-    color: #2d3447;
-    cursor: pointer;
-  }
-  .ra-refModal__oneTag {
-    border: none;
-    background: none;
-  }
-  .userAbilities__wrapper {
-    display: flex;
-  }
-  .userAbilities__wrapper .userAbilities__results {
-    flex: 1;
-    border: 1px solid #e5e5e5;
-    padding: 15px;
-    margin-left: 15px;
-  }
-  .__json-pretty__ {
-    line-height: 1.3;
-    color: #66d9ef;
-    background: #272822;
-    overflow: auto;
-  }
-  .__json-pretty__ .__json-key__ {
-    color: #f92672;
-  }
-  .__json-pretty__ .__json-value__ {
-    color: #a6e22e;
-  }
-  .__json-pretty__ .__json-string__ {
-    color: #fd971f;
-  }
-  .__json-pretty__ .__json-boolean__ {
-    color: #ac81fe;
-  }
-  
+  top: 25px !important;
+  width: calc(90%) !important;
+  transform-origin: 128px 490px 0px;
+  overflow: hidden;
+}
+.ra-refModal .ant-modal-footer {
+  bottom: 0px;
+  right: 0;
+  background: #434343;
+  left: 0px;
+  border: 0px;
+  display: flex;
+}
+.ra-refModal .ant-modal-content{
+  border: 1px solid #bcbcbc
+}
+.ra-refModal .ra-tableWrapper, .ra-refModal .ra-docWrapper {
+  padding: 0px;
+  background-color: #f1f3f6;
+}
+.ra-refModal .ra-tableContent .ra-tableContent-table .ant-table-fixed-header > .ant-table-content > .ant-table-scroll > .ant-table-body {
+  max-height: calc(100vh - var(--distanceFromTopList) - 124px) !important;
+  min-height: calc(100vh - 90px - var(--distanceFromTopList) - 124px) !important;
+}
+.ra-refModal .ant-modal-footer > div {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.ra-refModal
+  .ant-table-header
+  > table
+  > thead
+  > tr
+  > th.ant-table-selection-column
+  .ant-checkbox-wrapper {
+  visibility: hidden;
+  pointer-events: none;
+}
+.ra-refModal .ant-modal-body {
+  padding: 0px;
+  overflow: auto;
+}
+.ra-refModal .ra-tableContent {
+  height: calc(100vh - 100px - var(--distanceFromTopList));
+  max-height: calc(100vh - 100px - var(--distanceFromTopList));
+  border-top: 0px;
+  padding: 5px;
+}
+.ra-refModal .ra-docContent {
+  height: calc(100vh - 80px - var(--distanceFromTopDoc));
+  max-height: calc(100vh - 80px - var(--distanceFromTopDoc));
+}
+.ra-refModal__input {
+  border: 1px solid #e5e5e5;
+  padding: 0px 15px;
+  margin-bottom: 15px;
+  position: relative;
+  border-radius: 5px;
+  min-height: 32px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.ra-refModal__input .ant-tag {
+  margin: 2px;
+}
+.ra-refModal__input.--empty {
+  cursor: pointer;
+}
+.ra-refModal__input .ra-refModal__input__plus {
+  position: absolute;
+  right: 15px;
+  color: #2d3447;
+  cursor: pointer;
+}
+.ra-refModal__oneTag {
+  border: none;
+  background: none;
+}
+.userAbilities__wrapper {
+  display: flex;
+}
+.userAbilities__wrapper .userAbilities__results {
+  flex: 1;
+  border: 1px solid #e5e5e5;
+  padding: 15px;
+  margin-left: 15px;
+}
+.__json-pretty__ {
+  line-height: 1.3;
+  color: #66d9ef;
+  background: #272822;
+  overflow: auto;
+}
+.__json-pretty__ .__json-key__ {
+  color: #f92672;
+}
+.__json-pretty__ .__json-value__ {
+  color: #a6e22e;
+}
+.__json-pretty__ .__json-string__ {
+  color: #fd971f;
+}
+.__json-pretty__ .__json-boolean__ {
+  color: #ac81fe;
+}
