--- a/src/style.css
+++ b/src/style.css
@@ -69,6 +69,9 @@
 .ra-refModal__input.--empty {
   cursor: pointer;
 }
+.ra-refModal__input.--disabled {
+  background: whitesmoke;
+}
 .ra-refModal__input .ra-refModal__input__plus {
   position: absolute;
   right: 15px;
